--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/ui": "^3.4",
         "realrashid/sweet-alert": "^4.1",
         "spatie/laravel-permission": "^5.4",
+        "tavo1987/ec-validador-cedula-ruc": "^1.0",
         "willvincent/laravel-rateable": "^2.4"
     },
     "require-dev": {
